@@ -72,7 +72,7 @@ public class JmxFeature {
 
     private final CompositeData data;
 
-    public JmxFeature(Feature feature, boolean installed) {
+    public JmxFeature(Feature feature, boolean installed, boolean required) {
         try {
             String[] itemNames = FeaturesServiceMBean.FEATURE;
             Object[] itemValues = new Object[itemNames.length];
@@ -83,6 +83,8 @@ public class JmxFeature {
             itemValues[4] = getConfigList(feature.getConfigurations());
             itemValues[5] = getConfigFileList(feature.getConfigurationFiles());
             itemValues[6] = installed;
+            itemValues[7] = feature.isBlacklisted();
+            itemValues[8] = required;
             data = new CompositeDataSupport(FEATURE, itemNames, itemValues);
         } catch (OpenDataException e) {
             throw new IllegalStateException("Cannot form feature open data", e);
@@ -130,7 +132,7 @@ public class JmxFeature {
         TabularDataSupport table = new TabularDataSupport(FEATURE_CONFIG_TABLE);
         for (ConfigInfo configInfo : config) {
         	String[] itemNames = FeaturesServiceMBean.FEATURE_CONFIG;
-        	Object[] itemValues = { configInfo.getName(), getConfigElementTable(configInfo.getProperties()), new Boolean(configInfo.isAppend()) };
+        	Object[] itemValues = { configInfo.getName(), getConfigElementTable(configInfo.getProperties()), Boolean.valueOf(configInfo.isAppend()) };
 			CompositeData configComposite = new CompositeDataSupport(
 					FEATURE_CONFIG, itemNames, itemValues);
 			table.put(configComposite);
@@ -314,6 +316,8 @@ public class JmxFeature {
             itemTypes[4] = FEATURE_CONFIG_TABLE;
             itemTypes[5] = FEATURE_CONFIG_FILES_TABLE;
             itemTypes[6] = SimpleType.BOOLEAN;
+            itemTypes[7] = SimpleType.BOOLEAN;
+            itemTypes[8] = SimpleType.BOOLEAN;
 
             itemDescriptions[0] = "The name of the feature";
             itemDescriptions[1] = "The version of the feature";
@@ -322,6 +326,8 @@ public class JmxFeature {
             itemDescriptions[4] = "The feature configurations";
             itemDescriptions[5] = "The feature configuration files";
             itemDescriptions[6] = "Whether the feature is installed";
+            itemDescriptions[7] = "Whether the feature is blacklisted";
+            itemDescriptions[8] = "Whether the feature is required";
 
             return new CompositeType("Feature", description, itemNames,
                     itemDescriptions, itemTypes);
